--- a/lib/l10n/intl_ca.arb
+++ b/lib/l10n/intl_ca.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-15 12:08:43.538573",
+  "@@last_modified": "2025-12-15 13:09:52.878217",
   "about": "Quant a",
   "@about": {
     "type": "String",
@@ -10713,6 +10713,16 @@
     "placeholders": {}
   },
   "@vocabEmoji": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "requestRegeneration": "Sol·licitar regeneració",
+  "optionalRegenerateReason": "(Opcional) Motiu",
+  "@requestRegeneration": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@optionalRegenerateReason": {
     "type": "String",
     "placeholders": {}
   }
