--- a/lib/l10n/intl_eo.arb
+++ b/lib/l10n/intl_eo.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-15 12:09:19.885781",
+  "@@last_modified": "2025-12-15 13:10:20.520198",
   "about": "Prio",
   "@about": {
     "type": "String",
@@ -11778,6 +11778,16 @@
     "placeholders": {}
   },
   "@vocabEmoji": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "requestRegeneration": "Petu regeneradon",
+  "optionalRegenerateReason": "(Opcie) Kialo",
+  "@requestRegeneration": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@optionalRegenerateReason": {
     "type": "String",
     "placeholders": {}
   }
