--- a/lib/l10n/intl_nb.arb
+++ b/lib/l10n/intl_nb.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-15 12:08:40.670855",
+  "@@last_modified": "2025-12-15 13:09:50.414856",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -11782,6 +11782,16 @@
     "placeholders": {}
   },
   "@vocabEmoji": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "requestRegeneration": "Be om regenerering",
+  "optionalRegenerateReason": "(Valgfritt) Årsak",
+  "@requestRegeneration": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@optionalRegenerateReason": {
     "type": "String",
     "placeholders": {}
   }
