--- a/lib/l10n/intl_nl.arb
+++ b/lib/l10n/intl_nl.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-15 12:09:04.003380",
+  "@@last_modified": "2025-12-15 13:10:08.027282",
   "about": "Over ons",
   "@about": {
     "type": "String",
@@ -10689,6 +10689,16 @@
     "placeholders": {}
   },
   "@vocabEmoji": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "requestRegeneration": "Vraag regeneratie aan",
+  "optionalRegenerateReason": "(Optioneel) Reden",
+  "@requestRegeneration": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@optionalRegenerateReason": {
     "type": "String",
     "placeholders": {}
   }
