--- a/lib/l10n/intl_ru.arb
+++ b/lib/l10n/intl_ru.arb
@@ -1,6 +1,6 @@
 {
   "@@locale": "ru",
-  "@@last_modified": "2025-12-15 12:09:21.331850",
+  "@@last_modified": "2025-12-15 13:10:22.056511",
   "about": "О проекте",
   "@about": {
     "type": "String",
@@ -10794,6 +10794,16 @@
     "placeholders": {}
   },
   "@vocabEmoji": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "requestRegeneration": "Запросить регенерацию",
+  "optionalRegenerateReason": "(Необязательно) Причина",
+  "@requestRegeneration": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@optionalRegenerateReason": {
     "type": "String",
     "placeholders": {}
   }
