--- a/lib/l10n/intl_sv.arb
+++ b/lib/l10n/intl_sv.arb
@@ -1,5 +1,5 @@
 {
-  "@@last_modified": "2025-12-15 12:09:13.720212",
+  "@@last_modified": "2025-12-15 13:10:15.788663",
   "about": "Om",
   "@about": {
     "type": "String",
@@ -11167,6 +11167,16 @@
     "placeholders": {}
   },
   "@vocabEmoji": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "requestRegeneration": "Begär regenerering",
+  "optionalRegenerateReason": "(Valfritt) Orsak",
+  "@requestRegeneration": {
+    "type": "String",
+    "placeholders": {}
+  },
+  "@optionalRegenerateReason": {
     "type": "String",
     "placeholders": {}
   }
